Bug 15685 - Samba doesn't parse SDDL found in defaultSecurityDescriptor in AD_DS_Classes_Windows_Server_v1903.ldf
Summary: Samba doesn't parse SDDL found in defaultSecurityDescriptor in AD_DS_Classes_...
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.20.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-24 05:36 UTC by Douglas Bagnall
Modified: 2024-08-15 12:14 UTC (History)
1 user (show)

See Also:


Attachments
patch for 4.19 (2.71 KB, patch)
2024-07-26 03:01 UTC, Douglas Bagnall
jsutton: review+
Details
patch for 4.20 (2.74 KB, patch)
2024-07-26 03:01 UTC, Douglas Bagnall
jsutton: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Douglas Bagnall 2024-07-24 05:36:34 UTC
There's a space in 

   O:BAG:BAD: (A;;RPWPCRCCDCLCLORCWOWDSDDTSW;;;DA)(A;;RPLCLORC;;;AU)

after ":BAD:".

We reject it, but Windows doesn't and we didn't used to.
Comment 1 Douglas Bagnall 2024-07-24 21:32:55 UTC
> We reject it, but Windows doesn't and we didn't used to.

Actually, maybe we never accepted this. 

It's just we also never used the 2016 or 2019 ldif.
Comment 2 Samba QA Contact 2024-07-25 06:28:04 UTC
This bug was referenced in samba master:

8903876f65d5721d30186875d391889d1ddcd52c
Comment 3 Douglas Bagnall 2024-07-26 03:01:23 UTC
Created attachment 18385 [details]
patch for 4.19
Comment 4 Douglas Bagnall 2024-07-26 03:01:55 UTC
Created attachment 18386 [details]
patch for 4.20
Comment 5 Jule Anger 2024-07-29 12:06:10 UTC
Pushed to autobuild-v4-{20,19}-test.
Comment 6 Samba QA Contact 2024-07-29 13:18:03 UTC
This bug was referenced in samba v4-19-test:

4419ccc5778634d07338ae8733206b095234e453
Comment 7 Samba QA Contact 2024-07-29 13:30:03 UTC
This bug was referenced in samba v4-20-test:

f8e50d04e9f86c856122168bda507db6efd20896
Comment 8 Jule Anger 2024-07-30 07:29:18 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2024-08-02 12:14:26 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.3):

f8e50d04e9f86c856122168bda507db6efd20896
Comment 10 Samba QA Contact 2024-08-15 12:14:23 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.8):

4419ccc5778634d07338ae8733206b095234e453